[package]
name = "wx-login-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", optional = true }
actix-web = { version = "4", optional = true }
futures-util = { version = "0.3.30", features = ["default"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", optional = true }
tracing = { version = "0.1.40", features = ["default"] }
tiny-crypto = { version = "0.1.0", path = "../tiny-crypto"}
bincode = "1.3.3"
fastrand = "2.0.1"
itertools = "0.12.1"
hex = "0.4.3"

[features]
default = ["axum", "actix-web"]
axum = ["dep:axum", "dep:tower"]

[dev-dependencies]
tokio-test = "0.4.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[example]]
name = "axum_simple"
path = "examples/axum_simple.rs"
required-features = ["axum"]
